test/preprocessor/valid/builtin.glsl
__VERSION__
__LINE__
__FILE__
#line 24 42
__LINE__
__FILE__
#line 42
__LINE__
__FILE__