test/preprocessor/invalid/builtin.glsl
#define __FILE__ 0.24
#define __LINE__ 0.42
#define __VERSION__ int
#define GL_core_profile 72